--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -17,6 +17,13 @@
   justify-content: center;
 }
 
+.features {
+  display: flex;
+  align-items: center;
+  padding: 2rem 0;
+  width: 100%;
+}
+
 .joinUsPage {
   display: flex;
   justify-content: center;
