--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -39,7 +39,10 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 50vh;
   font-size: 20px;
   padding: 1.2rem;
+}
+
+.membersPageTitle {
+  color: red;
 }
